# pentra

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
frontend/: package-lock.json  package.json
frontend/src-tauri/: tauri.conf.json
src/: main.rs  mod.rs
src/cli/: mod.rs
src/core/: services.rs
src/modules/: portscan.rs
src/output/: banner.rs  mod.rs  table.rs
