[package]
name = "pentra"
version = "0.1.0"
edition = "2021"
authors = ["Pentra Contributors"]
description = "A lightweight, modular penetration testing platform"
license = "MIT"
repository = "https://github.com/Bytebeem/pentra"

[[bin]]
name = "pentra"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "color", "env"] }

# Async runtime
tokio = { version = "1.37", features = ["full"] }

# Networking
socket2 = { version = "0.5", features = ["all"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal UI
colored = "2.1"
indicatif = { version = "0.17", features = ["tokio"] }
comfy-table = "7.1"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
ipnetwork = "0.20"
dns-lookup = "2.0"
futures = "0.3"
once_cell = "1.19"
regex = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true